--- a/citizen-registration.html
+++ b/citizen-registration.html
@@ -275,25 +275,26 @@
         const submitButton = document.getElementById('submit-button');
         const messageBox = document.getElementById('message-box');
 
-        onAuthStateChanged(auth, (user) => {
-            if (user) {
-                console.log("Firebase Auth ready. User:", user.uid);
+        async function initializeAuth() {
+            try {
+                await signInAnonymously(auth);
+                console.log("Signed in anonymously.");
                 submitButton.disabled = false;
                 submitButton.textContent = 'Register Now';
-            } else {
-                 signInAnonymously(auth).catch((error) => {
-                    console.error("Anonymous sign-in failed:", error);
-                    messageBox.classList.remove('hidden');
-                    messageBox.classList.add('bg-red-100', 'text-red-700');
-                    if (error.code === 'auth/configuration-not-found') {
-                        messageBox.innerHTML = '<strong>Connection Failed:</strong> Please enable Authentication in your Firebase project. Go to your Firebase Console, click "Authentication" under the "Build" menu, click "Get started", and then enable the "Anonymous" sign-in provider.';
-                    } else {
-                        messageBox.textContent = 'Could not connect to registration service. Please try again.';
-                    }
-                    submitButton.textContent = 'Connection Failed';
-                });
+            } catch (error) {
+                console.error("Anonymous sign-in failed:", error);
+                messageBox.classList.remove('hidden');
+                messageBox.classList.add('bg-red-100', 'text-red-700');
+                if (error.code === 'auth/configuration-not-found') {
+                    messageBox.innerHTML = '<strong>Connection Failed:</strong> Firebase Authentication is not enabled for this project. Please go to your Firebase Console, click "Authentication" under the "Build" menu, click "Get started", and then enable the "Anonymous" sign-in provider on the "Sign-in method" tab.';
+                } else {
+                    messageBox.textContent = 'Could not connect to registration service. Please try again.';
+                }
+                submitButton.textContent = 'Connection Failed';
             }
-        });
+        }
+
+        initializeAuth();
 
         const form = document.getElementById('registration-form');
         
