--- a/news-article-1.html
+++ b/news-article-1.html
@@ -22,7 +22,7 @@
         .dropdown-content a { color: black; padding: 12px 16px; text-decoration: none; display: block; font-size: 0.9rem; }
         .dropdown-content a:hover { background-color: #f1f1f1; }
         .main-content-bg {
-            background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23e2e8f0' fill-opacity='0.4'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+            background-color: #f8f9fa;
         }
         .card-lift-effect {
             transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
@@ -56,9 +56,16 @@
             height: 24px;
             margin-right: 8px;
         }
+        /* Cookie Banner & Back to Top */
+        #cookie-banner {
+            transition: opacity 0.5s ease;
+        }
+        #back-to-top {
+            transition: opacity 0.3s, visibility 0.3s;
+        }
     </style>
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-50">
 
     <!-- Translate Button -->
      <a href="#" id="translate-link" class="translate-button" title="Translate to Czech">
@@ -108,9 +115,12 @@
                             <a href="visas.html">Visa Services</a>
                             <a href="etc.html">Emergency Travel Certificate</a>
                             <hr class="my-1">
+                             <span class="block px-4 pt-2 pb-1 text-xs text-gray-500 font-semibold uppercase">Citizen Services</span>
+                            <a href="citizens-identification.html">Citizen Identification</a>
+                            <a href="citizen-registration.html">Citizen Registration</a>
+                            <hr class="my-1">
                             <span class="block px-4 pt-2 pb-1 text-xs text-gray-500 font-semibold uppercase">Document Legalization</span>
                             <a href="age-declaration.html">Age Declaration</a>
-                            <a href="citizens-identification.html">Citizens Identification</a>
                             <a href="change-of-profession.html">Change of Profession</a>
                             <a href="burial-permit.html">Burial Transit Permit</a>
                         </div>
@@ -151,7 +161,7 @@
             <div class="absolute inset-0 bg-black opacity-60"></div>
             <div class="container mx-auto px-6 relative z-10">
                 <h1 class="text-4xl font-bold font-heading">Embassy Celebrates Nigerian Independence Day</h1>
-                <p class="text-gray-200 mt-2">Published on: September 1, 2025</p>
+                <p class="text-gray-200 mt-2">Published on: October 1, 2025</p>
             </div>
         </section>
 
@@ -159,14 +169,30 @@
         <div class="main-content-bg">
             <section class="py-20">
                 <div class="container mx-auto px-6">
-                    <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg card-lift-effect max-w-4xl mx-auto">
-                        <div class="prose max-w-none text-gray-700 space-y-6">
-                            <p class="lead">The Embassy of the Federal Republic of Nigeria in Prague is pleased to announce the details of the upcoming flag-raising ceremony and cultural reception to mark Nigeria's Independence Day anniversary.</p>
-                            <p>This auspicious event will be held at the Embassy premises and will be graced by the presence of Her Excellency, Charge D'Affairs A.I. Mrs. Sarah Bukar-Godwin, members of the diplomatic corps, Czech government officials, and leaders of the Nigerian community.</p>
-                            <p>The celebration will feature a showcase of Nigeria's rich cultural heritage, including traditional music, dance performances, and a taste of authentic Nigerian cuisine. It serves as an opportunity to reflect on our journey as a nation and to celebrate the enduring friendship between Nigeria and the Czech Republic.</p>
-                            <p>All members of the Nigerian community and friends of Nigeria are cordially invited to join in the festivities. Further details regarding the schedule of events will be made available shortly.</p>
-                             <a href="news.html" class="text-blue-600 hover:underline">&larr; Back to News</a>
+                    <div class="grid grid-cols-1 lg:grid-cols-3 gap-12">
+                        <div class="lg:col-span-2">
+                            <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg">
+                                <div class="prose max-w-none text-gray-700 space-y-6">
+                                    <p class="lead">The Embassy of the Federal Republic of Nigeria in Prague is pleased to announce the details of the upcoming flag-raising ceremony and cultural reception to mark Nigeria's Independence Day anniversary.</p>
+                                    <p>This auspicious event will be held at the Embassy premises and will be graced by the presence of Her Excellency, Charge D'Affairs A.I. Mrs. Sarah Bukar-Godwin, members of the diplomatic corps, Czech government officials, and leaders of the Nigerian community.</p>
+                                    <p>The celebration will feature a showcase of Nigeria's rich cultural heritage, including traditional music, dance performances, and a taste of authentic Nigerian cuisine. It serves as an opportunity to reflect on our journey as a nation and to celebrate the enduring friendship between Nigeria and the Czech Republic.</p>
+                                    <p>All members of the Nigerian community and friends of Nigeria are cordially invited to join in the festivities. Further details regarding the schedule of events will be made available shortly.</p>
+                                     <a href="news.html" class="text-blue-600 hover:underline">&larr; Back to News</a>
+                                </div>
+                            </div>
                         </div>
+                         <!-- Sidebar -->
+                        <aside class="lg:col-span-1">
+                            <div class="bg-white p-6 rounded-lg shadow-lg">
+                                <h3 class="font-heading text-xl font-bold mb-4 border-b pb-2">Useful Links</h3>
+                                <ul class="space-y-3 text-gray-700">
+                                    <li><a href="visas.html" class="hover:text-nigeria-green hover:underline"><i class="fas fa-passport mr-2"></i>Apply for a Nigerian Visa</a></li>
+                                    <li><a href="etc.html" class="hover:text-nigeria-green hover:underline"><i class="fas fa-plane-departure mr-2"></i>Emergency Travel Documents</a></li>
+                                    <li><a href="https://www.immigration.gov.ng/" target="_blank" class="hover:text-nigeria-green hover:underline"><i class="fas fa-link mr-2"></i>Nigeria Immigration Service</a></li>
+                                    <li><a href="news.html" class="hover:text-nigeria-green hover:underline"><i class="fas fa-calendar-alt mr-2"></i>Public Holidays Schedule</a></li>
+                                </ul>
+                            </div>
+                        </aside>
                     </div>
                 </div>
             </section>
@@ -195,9 +221,25 @@
         </div>
     </footer>
     
+     <!-- Back to Top Button -->
+    <button id="back-to-top" class="fixed bottom-5 right-5 bg-nigeria-green text-white p-3 rounded-full shadow-lg hover:bg-green-700 transition-opacity duration-300 opacity-0 invisible">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+
+    <!-- Cookie Consent Banner -->
+    <div id="cookie-banner" class="fixed bottom-0 left-0 right-0 bg-gray-800 text-white p-4 flex items-center justify-between shadow-lg opacity-0 -translate-y-full">
+        <p class="text-sm">We use cookies to enhance your experience. By continuing to visit this site you agree to our use of cookies.</p>
+        <button id="cookie-accept" class="bg-nigeria-green text-white py-2 px-4 rounded-lg hover:bg-green-700">Accept</button>
+    </div>
+
     <script>
+        // Function to scroll to top on page load/refresh
+        window.onbeforeunload = function () {
+            window.scrollTo(0, 0);
+        }
+
         document.addEventListener('DOMContentLoaded', function () {
-            // JS for menus and translation
+            // JS for menus and live clock
             function updateTime() {
                 const timeEl = document.getElementById('prague-time');
                 if (timeEl) {
@@ -258,13 +300,42 @@
                     mobileMenu.classList.add('hidden');
                 }
             });
-
+            
+            // Translate button logic
             const translateLink = document.getElementById('translate-link');
             if(translateLink) {
                 const currentPageUrl = window.location.href;
                 const googleTranslateUrl = `https://translate.google.com/translate?sl=en&tl=cs&u=${encodeURIComponent(currentPageUrl)}`;
                 translateLink.href = googleTranslateUrl;
                 translateLink.target = '_blank';
+            }
+
+            // Cookie Banner
+            const cookieBanner = document.getElementById('cookie-banner');
+            const cookieAccept = document.getElementById('cookie-accept');
+            if (cookieBanner && cookieAccept) {
+                if (!localStorage.getItem('cookie_consent')) {
+                    cookieBanner.classList.remove('opacity-0', '-translate-y-full');
+                }
+                cookieAccept.addEventListener('click', function() {
+                    localStorage.setItem('cookie_consent', 'true');
+                    cookieBanner.style.display = 'none';
+                });
+            }
+
+            // Back to Top Button
+            const backToTopButton = document.getElementById('back-to-top');
+            if(backToTopButton) {
+                window.addEventListener('scroll', function() {
+                    if (window.pageYOffset > 300) {
+                        backToTopButton.classList.remove('opacity-0', 'invisible');
+                    } else {
+                        backToTopButton.classList.add('opacity-0', 'invisible');
+                    }
+                });
+                backToTopButton.addEventListener('click', function() {
+                    window.scrollTo({ top: 0, behavior: 'smooth' });
+                });
             }
         });
     </script>
