--- a/our-team.html
+++ b/our-team.html
@@ -22,7 +22,7 @@
         .dropdown-content a { color: black; padding: 12px 16px; text-decoration: none; display: block; font-size: 0.9rem; }
         .dropdown-content a:hover { background-color: #f1f1f1; }
         .main-content-bg {
-            background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23e2e8f0' fill-opacity='0.4'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+            background-color: #f8f9fa;
         }
         .card-lift-effect {
             transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
@@ -56,9 +56,16 @@
             height: 24px;
             margin-right: 8px;
         }
+        /* Cookie Banner & Back to Top */
+        #cookie-banner {
+            transition: opacity 0.5s ease;
+        }
+        #back-to-top {
+            transition: opacity 0.3s, visibility 0.3s;
+        }
     </style>
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-50">
 
     <!-- Translate Button -->
      <a href="#" id="translate-link" class="translate-button" title="Translate to Czech">
@@ -108,9 +115,12 @@
                             <a href="visas.html">Visa Services</a>
                             <a href="etc.html">Emergency Travel Certificate</a>
                             <hr class="my-1">
+                            <span class="block px-4 pt-2 pb-1 text-xs text-gray-500 font-semibold uppercase">Citizen Services</span>
+                            <a href="citizens-identification.html">Citizen Identification</a>
+                            <a href="citizen-registration.html">Citizen Registration</a>
+                            <hr class="my-1">
                             <span class="block px-4 pt-2 pb-1 text-xs text-gray-500 font-semibold uppercase">Document Legalization</span>
                             <a href="age-declaration.html">Age Declaration</a>
-                            <a href="citizens-identification.html">Citizens Identification</a>
                             <a href="change-of-profession.html">Change of Profession</a>
                             <a href="burial-permit.html">Burial Transit Permit</a>
                         </div>
@@ -163,11 +173,11 @@
                              <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg">
                                 <p class="text-center text-gray-600 max-w-2xl mx-auto mb-12">Our dedicated team of diplomats and local staff are committed to serving the needs of our community and strengthening the ties between Nigeria and the Czech Republic.</p>
                                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 max-w-5xl mx-auto">
-                                    <!-- Ambassador Profile -->
+                                    <!-- CDA Profile -->
                                     <div class="team-card text-center p-6 rounded-lg card-lift-effect">
-                                        <img src="images/ambassador.jpg" alt="Ambassador H.E. Dr. Maureen Tamuno" class="w-48 h-48 mx-auto rounded-full object-cover shadow-lg mb-4">
-                                        <h3 class="text-xl font-bold font-heading nigeria-green">H.E. Dr. Maureen Tamuno</h3>
-                                        <p class="text-gray-500 font-semibold">Ambassador / Head of Mission</p>
+                                        <img src="images/cda.jpg" alt="Charge D'Affaires A.I. Mrs Sarah Bukar-Godwin" class="w-48 h-48 mx-auto rounded-full object-cover shadow-lg mb-4">
+                                        <h3 class="text-xl font-bold font-heading nigeria-green">Mrs. Sarah Bukar-Godwin</h3>
+                                        <p class="text-gray-500 font-semibold">Charge D'Affaires A.I. / Head of Mission</p>
                                     </div>
                                     <!-- Deputy Profile -->
                                     <div class="team-card text-center p-6 rounded-lg card-lift-effect">
@@ -224,6 +234,17 @@
         </div>
     </footer>
     
+    <!-- Back to Top Button -->
+    <button id="back-to-top" class="fixed bottom-5 right-5 bg-nigeria-green text-white p-3 rounded-full shadow-lg hover:bg-green-700 transition-opacity duration-300 opacity-0 invisible">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+
+    <!-- Cookie Consent Banner -->
+    <div id="cookie-banner" class="fixed bottom-0 left-0 right-0 bg-gray-800 text-white p-4 flex items-center justify-between shadow-lg opacity-0 -translate-y-full">
+        <p class="text-sm">We use cookies to enhance your experience. By continuing to visit this site you agree to our use of cookies.</p>
+        <button id="cookie-accept" class="bg-nigeria-green text-white py-2 px-4 rounded-lg hover:bg-green-700">Accept</button>
+    </div>
+
     <script>
         // Function to scroll to top on page load/refresh
         window.onbeforeunload = function () {
@@ -292,7 +313,7 @@
                     mobileMenu.classList.add('hidden');
                 }
             });
-
+            
             // Translate button logic
             const translateLink = document.getElementById('translate-link');
             if(translateLink) {
@@ -300,6 +321,34 @@
                 const googleTranslateUrl = `https://translate.google.com/translate?sl=en&tl=cs&u=${encodeURIComponent(currentPageUrl)}`;
                 translateLink.href = googleTranslateUrl;
                 translateLink.target = '_blank';
+            }
+
+            // Cookie Banner
+            const cookieBanner = document.getElementById('cookie-banner');
+            const cookieAccept = document.getElementById('cookie-accept');
+            if (cookieBanner && cookieAccept) {
+                if (!localStorage.getItem('cookie_consent')) {
+                    cookieBanner.classList.remove('opacity-0', '-translate-y-full');
+                }
+                cookieAccept.addEventListener('click', function() {
+                    localStorage.setItem('cookie_consent', 'true');
+                    cookieBanner.style.display = 'none';
+                });
+            }
+
+            // Back to Top Button
+            const backToTopButton = document.getElementById('back-to-top');
+            if(backToTopButton) {
+                window.addEventListener('scroll', function() {
+                    if (window.pageYOffset > 300) {
+                        backToTopButton.classList.remove('opacity-0', 'invisible');
+                    } else {
+                        backToTopButton.classList.add('opacity-0', 'invisible');
+                    }
+                });
+                backToTopButton.addEventListener('click', function() {
+                    window.scrollTo({ top: 0, behavior: 'smooth' });
+                });
             }
         });
     </script>
