--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                  <div class="container mx-auto px-6">
                     <div class="bg-white p-12 rounded-lg shadow-lg card-lift-effect">
                         <div class="flex flex-wrap items-center">
-                            <div class="w-full md:w-1/3 text-center mb-8 md:mb-0"><img src="images/cda.jpg" alt="Charge D'Affairs Photo" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]"></div>
+                            <div class="w-full md:w-1/3 text-center mb-8 md:mb-0"><img src="images/charge-daffairs.jpg" alt="Charge D'Affairs Photo" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]"></div>
                             <div class="w-full md:w-2/3 md:pl-12">
                                 <h2 class="text-3xl md:text-4xl font-bold font-heading text-gray-800">A Message from the Charge D'Affairs</h2>
                                 <div class="w-20 h-1 bg-nigeria-green my-6"></div>
@@ -248,12 +248,14 @@
                                 <div class="w-20 h-1 bg-nigeria-green my-6"></div>
                                 <div class="prose max-w-none text-gray-700 space-y-4">
                                    <p>Our mission operates under the diplomatic vision set forth by the Honourable Minister of Foreign Affairs, Ambassador Yusuf Maitama Tuggar, which is centered on a "4D" foreign policy agenda: Democracy, Development, Demography, and Diaspora.</p>
-                                   <p>A central pillar of this vision is a renewed focus on you—the Nigerian Diaspora. We are committed to a citizen-centric approach to diplomacy, ensuring that this Embassy is a welcoming and effective resource for every bearer of the Nigerian green passport.</p>
+                                   <p>A central pillar of this vision is a renewed focus on you; the Nigerian Diaspora. We are committed to a citizen-centric approach to diplomacy, ensuring that this Embassy is a welcoming and effective resource for every bearer of the Nigerian green passport.</p>
                                    <p>In the words of the Honourable Minister, we are "servants of the people." Our primary mandate is to serve you with dignity, respect, and a smile.</p>
                                 </div>
                             </div>
                              <div class="w-full md:w-1/3 text-center mt-8 md:mt-0">
-                                <img src="images/minister-portrait.png" alt="Honourable Minister of Foreign Affairs, Ambassador Yusuf Maitama Tuggar" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
+                                <img src="images/minister-portrait.jpg" alt="Honourable Minister of Foreign Affairs, Ambassador Yusuf Maitama Tuggar" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
+                                <h3 class="font-heading text-xl mt-4 font-bold nigeria-green">Ambassador Yusuf Maitama Tuggar, OON</h3>
+                                <p class="text-gray-600">Honourable Minister of Foreign Affairs</p>
                             </div>
                         </div>
                     </div>
