--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 </div>
                  <div class="flex items-center ml-6 pl-6 border-l border-gray-200">
                     <div class="hidden xl:flex items-center text-sm text-gray-600 mr-6">
-                        <i class="fas fa-phone-alt mr-2 nigeria-green"></i>
+                        <i class="fas fa-mail-alt mr-2 nigeria-green"></i>
                         <span>+420 220 561 040</span>
                     </div>
                     <div class="flex items-center space-x-4">
