--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 </div>
                  <div class="flex items-center ml-6 pl-6 border-l border-gray-200">
                     <div class="hidden xl:flex items-center text-sm text-gray-600 mr-6">
-                        <i class="fas fa-mail-alt mr-2 nigeria-green"></i>
+                        <i class="fas fa-phone-alt mr-2 nigeria-green"></i>
                         <span>+420 220 561 040</span>
                     </div>
                     <div class="flex items-center space-x-4">
@@ -253,7 +253,7 @@
                                 </div>
                             </div>
                              <div class="w-full md:w-1/3 text-center mt-8 md:mt-0">
-                                <img src="images/minister-portrait.jpg" alt="Honourable Minister of Foreign Affairs, Ambassador Yusuf Maitama Tuggar" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
+                                <img src="images/minister-portrait.png" alt="Honourable Minister of Foreign Affairs, Ambassador Yusuf Maitama Tuggar" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
                                 <h3 class="font-heading text-xl mt-4 font-bold nigeria-green">Ambassador Yusuf Maitama Tuggar, OON</h3>
                                 <p class="text-gray-600">Honourable Minister of Foreign Affairs</p>
                             </div>
