--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
                 </div>
                  <div class="flex items-center ml-6 pl-6 border-l border-gray-200">
                     <div class="hidden xl:flex items-center text-sm text-gray-600 mr-6">
-                        <i class="fas fa-phone-alt mr-2 nigeria-green"></i>
-                        <span>+420 220 561 040</span>
+                        <i class="fas fa-envelope mr-2 nigeria-green"></i>
+                        <a href="mailto:info@nigerianembassy.cz" class="hover:underline">info@nigerianembassy.cz</a>
                     </div>
                     <div class="flex items-center space-x-4">
                         <a href="https://x.com/NigeriaInPrague" class="text-gray-500 hover:nigeria-green transition-colors" title="Follow us on X"><i class="fa-brands fa-x-twitter text-xl"></i></a>
@@ -226,7 +226,7 @@
                  <div class="container mx-auto px-6">
                     <div class="bg-white p-12 rounded-lg shadow-lg card-lift-effect">
                         <div class="flex flex-wrap items-center">
-                            <div class="w-full md:w-1/3 text-center mb-8 md:mb-0"><img src="images/charge-daffairs.jpg" alt="Charge D'Affairs Photo" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]"></div>
+                            <div class="w-full md:w-1/3 text-center mb-8 md:mb-0"><img src="images/cda.jpg" alt="Charge D'Affairs Photo" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]"></div>
                             <div class="w-full md:w-2/3 md:pl-12">
                                 <h2 class="text-3xl md:text-4xl font-bold font-heading text-gray-800">A Message from the Charge D'Affairs</h2>
                                 <div class="w-20 h-1 bg-nigeria-green my-6"></div>
@@ -248,13 +248,13 @@
                                 <div class="w-20 h-1 bg-nigeria-green my-6"></div>
                                 <div class="prose max-w-none text-gray-700 space-y-4">
                                    <p>Our mission operates under the diplomatic vision set forth by the Honourable Minister of Foreign Affairs, Ambassador Yusuf Maitama Tuggar, which is centered on a "4D" foreign policy agenda: Democracy, Development, Demography, and Diaspora.</p>
-                                   <p>A central pillar of this vision is a renewed focus on you; the Nigerian Diaspora. We are committed to a citizen-centric approach to diplomacy, ensuring that this Embassy is a welcoming and effective resource for every bearer of the Nigerian green passport.</p>
+                                   <p>A central pillar of this vision is a renewed focus on you—the Nigerian Diaspora. We are committed to a citizen-centric approach to diplomacy, ensuring that this Embassy is a welcoming and effective resource for every bearer of the Nigerian green passport.</p>
                                    <p>In the words of the Honourable Minister, we are "servants of the people." Our primary mandate is to serve you with dignity, respect, and a smile.</p>
                                 </div>
                             </div>
                              <div class="w-full md:w-1/3 text-center mt-8 md:mt-0">
                                 <img src="images/minister-portrait.png" alt="Honourable Minister of Foreign Affairs, Ambassador Yusuf Maitama Tuggar" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
-                                <h3 class="font-heading text-xl mt-4 font-bold nigeria-green">Ambassador Yusuf Maitama Tuggar, OON</h3>
+                                <h3 class="font-heading text-xl mt-4 font-bold nigeria-green">Ambassador Yusuf Maitama Tuggar</h3>
                                 <p class="text-gray-600">Honourable Minister of Foreign Affairs</p>
                             </div>
                         </div>
@@ -349,7 +349,7 @@
         <div class="container mx-auto px-6">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                 <div><h4 class="font-bold text-xl mb-4 font-heading">About the Embassy</h4><p class="text-sm">The Embassy of the Federal Republic of Nigeria in Prague is the official diplomatic representation of Nigeria in the Czech Republic.</p></div>
-                <div><h4 class="font-bold text-xl mb-4 font-heading">Contact Information</h4><ul class="text-sm space-y-2"><li class="flex items-start"><i class="fas fa-map-marker-alt w-4 mr-3 mt-1"></i><span>Na Čihadle 32, 160 00 Praha 6, Czech Republic</span></li><li class="flex items-center"><i class="fas fa-phone-alt w-4 mr-3"></i><span>+420 220 561 040</span></li><li class="flex items-center"><i class="fas fa-envelope w-4 mr-3"></i><span>info@nigerianembassy.cz</span></li></ul></div>
+                <div><h4 class="font-bold text-xl mb-4 font-heading">Contact Information</h4><ul class="text-sm space-y-2"><li class="flex items-start"><i class="fas fa-map-marker-alt w-4 mr-3 mt-1"></i><span>Na Čihadle 917/32, 160 00 Praha 6-Hanspaulka, Czech Republic</span></li><li class="flex items-center"><i class="fas fa-phone-alt w-4 mr-3"></i><span>+420 220 561 040</span></li><li class="flex items-center"><i class="fas fa-envelope w-4 mr-3"></i><span>info@nigerianembassy.cz</span></li></ul></div>
                 <div>
                     <h4 class="font-bold text-xl mb-4 font-heading">Consular Hours</h4>
                     <ul class="text-sm space-y-2">
