--- a/cda.html
+++ b/cda.html
@@ -173,7 +173,7 @@
                             <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg">
                                 <div class="flex flex-wrap md:flex-nowrap items-start">
                                     <div class="w-full md:w-1/3 text-center mb-8 md:mb-0 md:pr-8">
-                                        <img src="images/charge-daffairs.jpg" alt="CDA A.I Mrs. Sarah Bukar-Godwin" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
+                                        <img src="images/cda.jpg" alt="CDA A.I Mrs. Sarah Bukar-Godwin" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
                                         <h3 class="font-heading text-2xl mt-4 font-bold nigeria-green">Mrs. Sarah Bukar-Godwin</h3>
                                         <p class="text-gray-600">Charge D'Affaires A.I.</p>
                                     </div>
