--- a/cda.html
+++ b/cda.html
@@ -134,7 +134,8 @@
                     </div>
                     <a href="contact.html" class="text-gray-600 hover:nigeria-green">Contact Us</a>
                 </div>
-                <div class="hidden xl:flex items-center text-sm text-gray-600 mr-6">
+                 <div class="flex items-center ml-6 pl-6 border-l border-gray-200">
+                    <div class="hidden xl:flex items-center text-sm text-gray-600 mr-6">
                         <i class="fas fa-envelope mr-2 nigeria-green"></i>
                         <a href="mailto:info@nigerianembassy.cz" class="hover:underline">info@nigerianembassy.cz</a>
                     </div>
