--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                  <div class="flex items-center ml-6 pl-6 border-l border-gray-200">
                     <div class="hidden xl:flex items-center text-sm text-gray-600 mr-6">
                         <i class="fas fa-envelope mr-2 nigeria-green"></i>
-                        <a href="mailto:info@nigerianembassy.cz" class="hover:underline">info@nigerianembassy.cz</a>
+                        <a href="mailto:info@nigerianembassyprague.cz" class="hover:underline">info@nigerianembassyprague.cz</a>
                     </div>
                     <div class="flex items-center space-x-4">
                         <a href="https://x.com/NigeriaInPrague" class="text-gray-500 hover:nigeria-green transition-colors" title="Follow us on X"><i class="fa-brands fa-x-twitter text-xl"></i></a>
