--- a/contact.html
+++ b/contact.html
@@ -180,7 +180,7 @@
                         <!-- Contact Form -->
                         <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg card-lift-effect">
                             <h2 class="text-3xl font-bold font-heading mb-6">Send Us a Message</h2>
-                            <form action="mailto:info@nigerianembassy.cz" method="post" enctype="text/plain">
+                            <form action="mailto:info@nigerianembassyprague.cz" method="post" enctype="text/plain">
                                 <div class="mb-4">
                                     <label for="name" class="block text-gray-700 font-semibold mb-2">Full Name</label>
                                     <input type="text" id="name" name="Name" class="form-input w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none" required>
@@ -207,8 +207,8 @@
                         <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg card-lift-effect">
                             <h2 class="text-3xl font-bold font-heading mb-6">Our Information</h2>
                             <div class="space-y-6">
-                                <div><h4 class="font-bold text-xl mb-2 font-heading">Contact Details</h4><ul class="text-gray-700 space-y-2"><li class="flex items-start"><i class="fas fa-map-marker-alt w-5 mr-3 mt-1 nigeria-green"></i><span>Na Čihadle 32, 160 00 Praha 6, Czech Republic</span></li><li class="flex items-center"><i class="fas fa-phone-alt w-5 mr-3 nigeria-green"></i><span>+420 220 561 040</span></li><li class="flex items-center"><i class="fas fa-envelope w-5 mr-3 nigeria-green"></i><span>info@nigerianembassy.cz</span></li></ul></div>
-                                <div><h4 class="font-bold text-xl mb-2 font-heading">Consular Hours</h4><ul class="text-gray-700 space-y-2"><li><span class="font-semibold">Monday - Friday:</span> 10:00 AM - 1:00 PM</li><li><span class="font-semibold">Weekends & Public Holidays:</span> Closed</li></ul></div>
+                                <div><h4 class="font-bold text-xl mb-2 font-heading">Contact Details</h4><ul class="text-gray-700 space-y-2"><li class="flex items-start"><i class="fas fa-map-marker-alt w-5 mr-3 mt-1 nigeria-green"></i><span>Na Čihadle 917/32, 160 00 Praha 6-Hanspaulka, Czech Republic</span></li><li class="flex items-center"><i class="fas fa-phone-alt w-5 mr-3 nigeria-green"></i><span>+420 220 561 040</span></li><li class="flex items-center"><i class="fas fa-envelope w-5 mr-3 nigeria-green"></i><span>info@nigerianembassy.cz</span></li></ul></div>
+                                <div><h4 class="font-bold text-xl mb-2 font-heading">Consular Hours</h4><ul class="text-gray-700 space-y-2"><li><span class="font-semibold">Monday - Wednesday:</span> 10:00 AM - 2:00 PM</li><li><span class="font-semibold">Weekends & Public Holidays:</span> Closed</li></ul></div>
                                 <div>
                                     <h4 class="font-bold text-xl mb-2 font-heading">Our Location</h4>
                                     <iframe src="https://maps.google.com/maps?q=Na%20%C4%8Cihadle%2032,%20160%2000%20Praha%206&t=&z=15&ie=UTF8&iwloc=&output=embed" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" class="rounded-lg shadow-md"></iframe>
