--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                             </div>
                              <div class="w-full md:w-1/3 text-center mt-8 md:mt-0">
                                 <img src="images/minister-portrait.png" alt="Honourable Minister of Foreign Affairs, Ambassador Yusuf Maitama Tuggar, OON" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]">
-                                <h3 class="font-heading text-xl mt-4 font-bold nigeria-green">Ambassador Yusuf Maitama Tuggar</h3>
+                                <h3 class="font-heading text-xl mt-4 font-bold nigeria-green">Ambassador Yusuf Maitama Tuggar, OON</h3>
                                 <p class="text-gray-600">Honourable Minister of Foreign Affairs</p>
                             </div>
                         </div>
