--- a/news-article-2.html
+++ b/news-article-2.html
@@ -95,7 +95,7 @@
                     <div class="dropdown relative">
                         <button class="dropdown-toggle text-gray-600 hover:nigeria-green inline-flex items-center">About Us <i class="fas fa-chevron-down text-xs ml-2"></i></button>
                         <div class="dropdown-content">
-                            <a href="cda.html">Charge D' Affairs' Welcome</a>
+                            <a href="cda.html">Charge D' Affaires' Welcome</a>
                             <a href="mission-history.html">History of the Mission</a>
                             <a href="our-team.html">Our Team</a>
                         </div>
@@ -160,8 +160,8 @@
             <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/news-event3.jpg');"></div>
             <div class="absolute inset-0 bg-black opacity-60"></div>
             <div class="container mx-auto px-6 relative z-10">
-                <h1 class="text-4xl font-bold font-heading">Nigeria-Czech Business Forum Announced</h1>
-                <p class="text-gray-200 mt-2">Published on: August 15, 2025</p>
+                <h1 class="text-4xl font-bold font-heading">The Embassy of Nigeria Deepens Strategic Engagement with Nigerian Experts’ and Professionals in the Czech Republic</h1>
+                <p class="text-gray-200 mt-2">Published on: September 27, 2025</p>
             </div>
         </section>
 
@@ -175,7 +175,7 @@
                                 <div class="prose max-w-none text-gray-700 space-y-6">
                                     <p class="lead">In a bid to boost trade and investment between Nigeria and the Czech Republic, the Embassy is pleased to announce the upcoming Nigeria-Czech Business Forum, scheduled to take place in Prague.</p>
                                     <p>This landmark event will bring together key stakeholders, entrepreneurs, and investors from both nations to explore opportunities for collaboration, particularly in the burgeoning sectors of technology, renewable energy, and agriculture. The forum will feature panel discussions, B2B matchmaking sessions, and presentations on the investment climate in Nigeria.</p>
-                                    <p>Her Excellency, Charge D'Affairs A.I. Mrs. Sarah Bukar-Godwin, emphasized the importance of the event, stating, "This forum represents a significant step forward in our economic diplomacy. We aim to create a powerful platform for Czech businesses to discover the immense potential of the Nigerian market."</p>
+                                    <p>Her Excellency, Charge D'Affaires A.I. Mrs. Sarah Bukar, emphasized the importance of the event, stating, "This forum represents a significant step forward in our economic diplomacy. We aim to create a powerful platform for Czech businesses to discover the immense potential of the Nigerian market."</p>
                                     <p>Registration for the event is now open. Interested parties are encouraged to visit the Embassy's website for more information and to secure their participation.</p>
                                      <a href="news.html" class="text-blue-600 hover:underline">&larr; Back to News</a>
                                 </div>
