--- a/news.html
+++ b/news.html
@@ -189,7 +189,7 @@
                                     <div class="p-6 flex flex-col justify-between">
                                         <div>
                                             <span class="text-sm text-gray-500">September 27, 2025</span>
-                                            <h2 class="font-heading text-2xl font-bold my-2 nigeria-green">Nigeria Deepens Strategic Engagement with Czech Republic</h2>
+                                            <h2 class="font-heading text-2xl font-bold my-2 nigeria-green">The Embassy Meets with Nigerians in Czech Republic</h2>
                                             <p class="text-gray-600 mb-4">In a bid to strengthen diplomatic, economic, and people-to-people ties, the Nigeria Embassy in Prague successfully hosted a Meet and Greet event...</p>
                                         </div>
                                         <a href="news-article-2.html" class="font-semibold text-gray-700 hover:nigeria-green self-start">Read More &rarr;</a>
