--- a/news-article-2.html
+++ b/news-article-2.html
@@ -160,7 +160,7 @@
             <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/news-event3.jpg');"></div>
             <div class="absolute inset-0 bg-black opacity-60"></div>
             <div class="container mx-auto px-6 relative z-10">
-                <h1 class="text-4xl font-bold font-heading">The Embassy of Nigeria Deepens Strategic Engagement with Nigerian Experts’ and Professionals in the Czech Republic</h1>
+                <h1 class="text-4xl font-bold font-heading">The Embassy Meets with Nigerians in Czech Republic</h1>
                 <p class="text-gray-200 mt-2">Published on: September 27, 2025</p>
             </div>
         </section>
