--- a/visas.html
+++ b/visas.html
@@ -185,7 +185,7 @@
                                 <li>Proof of online payment.</li>
                                 <li>Passport valid for at least six months with at least two blank visa pages.</li>
                                 <li>Two recent passport-sized photographs.</li>
-                                <li>Confirmed flight itinerary.</li>
+                                <li>Confirmed flight itinerary and Hotel Reservations.</li>
                                 <li>Evidence of sufficient funds.</li>
                             </ul>
                             
