--- a/age-declaration.html
+++ b/age-declaration.html
@@ -137,7 +137,7 @@
                  <div class="flex items-center ml-6 pl-6 border-l border-gray-200">
                     <div class="hidden xl:flex items-center text-sm text-gray-600 mr-6">
                         <i class="fas fa-envelope mr-2 nigeria-green"></i>
-                        <a href="mailto:info@nigerianembassyprague.cz" class="hover:underline">info@nigerianembassyprague.cz</a>
+                        <a href="mailto:info@nigerianembassyprague.ng" class="hover:underline">info@nigerianembassyprague.ng</a>
                     </div>
                     <div class="flex items-center space-x-4">
                         <a href="https://x.com/NigeriaInPrague" class="text-gray-500 hover:nigeria-green transition-colors" title="Follow us on X"><i class="fa-brands fa-x-twitter text-xl"></i></a>
@@ -213,7 +213,7 @@
         <div class="container mx-auto px-6">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                 <div><h4 class="font-bold text-xl mb-4 font-heading">About the Embassy</h4><p class="text-sm">The Embassy of the Federal Republic of Nigeria in Prague is the official diplomatic representation of Nigeria in the Czech Republic.</p></div>
-                <div><h4 class="font-bold text-xl mb-4 font-heading">Contact Information</h4><ul class="text-sm space-y-2"><li class="flex items-start"><i class="fas fa-map-marker-alt w-4 mr-3 mt-1"></i><span>Na Čihadle 32, 160 00 Praha 6, Czech Republic</span></li><li class="flex items-center"><i class="fas fa-phone-alt w-4 mr-3"></i><span>+420 220 561 040</span></li><li class="flex items-center"><i class="fas fa-envelope w-4 mr-3"></i><span>info@nigerianembassy.cz</span></li></ul></div>
+                <div><h4 class="font-bold text-xl mb-4 font-heading">Contact Information</h4><ul class="text-sm space-y-2"><li class="flex items-start"><i class="fas fa-map-marker-alt w-4 mr-3 mt-1"></i><span>Na Čihadle 917/32, 160 00 Praha 6, Czech Republic</span></li><li class="flex items-center"><i class="fas fa-phone-alt w-4 mr-3"></i><span>+420 220 561 040</span></li><li class="flex items-center"><i class="fas fa-envelope w-4 mr-3"></i><span>info@nigerianembassy.cz</span></li></ul></div>
                 <div>
                     <h4 class="font-bold text-xl mb-4 font-heading">Consular Hours</h4>
                     <ul class="text-sm space-y-2">
